--- a/Modacity/Modacity/ViewController/Recording/recording.storyboard
+++ b/Modacity/Modacity/ViewController/Recording/recording.storyboard
@@ -45,7 +45,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="818"/>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CNn-EP-Nwe">
-                                <rect key="frame" x="0.0" y="68" width="375" height="710"/>
+                                <rect key="frame" x="0.0" y="68" width="375" height="646"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="separatorColor" red="1" green="1" blue="1" alpha="0.20000000000000001" colorSpace="calibratedRGB"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -360,7 +360,7 @@
                             <constraint firstItem="gqx-8z-QHB" firstAttribute="leading" secondItem="rly-BA-YxF" secondAttribute="leading" id="Tcn-2h-iP1"/>
                             <constraint firstItem="Zsv-QP-HDz" firstAttribute="leading" secondItem="rly-BA-YxF" secondAttribute="leading" id="XCj-C8-7na"/>
                             <constraint firstItem="Ztx-ga-j4z" firstAttribute="top" secondItem="rly-BA-YxF" secondAttribute="top" constant="15" id="Y0N-SA-B6E"/>
-                            <constraint firstItem="CNn-EP-Nwe" firstAttribute="bottom" secondItem="rly-BA-YxF" secondAttribute="bottom" id="cqt-kf-Tbi"/>
+                            <constraint firstItem="CNn-EP-Nwe" firstAttribute="bottom" secondItem="rly-BA-YxF" secondAttribute="bottom" constant="-64" id="cqt-kf-Tbi"/>
                             <constraint firstItem="gqx-8z-QHB" firstAttribute="top" secondItem="vOq-iZ-hGH" secondAttribute="top" id="fMA-T4-Max"/>
                             <constraint firstItem="4iB-0p-MYW" firstAttribute="centerY" secondItem="Ztx-ga-j4z" secondAttribute="centerY" id="ffd-5b-TLH"/>
                             <constraint firstItem="URZ-6K-Gdi" firstAttribute="trailing" secondItem="rly-BA-YxF" secondAttribute="trailing" id="ipX-hc-SSX"/>
