--- a/Modacity/Modacity/ViewController/Playlist/playlist.storyboard
+++ b/Modacity/Modacity/ViewController/Playlist/playlist.storyboard
@@ -1799,7 +1799,7 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView userInteractionEnabled="NO" alpha="0.20000000000000001" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_arrow_right" translatesAutoresizingMaskIntoConstraints="NO" id="rg6-dd-QIE">
+                                    <imageView hidden="YES" userInteractionEnabled="NO" alpha="0.20000000000000001" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_arrow_right" translatesAutoresizingMaskIntoConstraints="NO" id="rg6-dd-QIE">
                                         <rect key="frame" x="307" y="16.5" width="8" height="12"/>
                                     </imageView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Dl-IB-GFs">
@@ -1927,7 +1927,7 @@
     <resources>
         <image name="bg_btn_gradient" width="375" height="64"/>
         <image name="bg_common" width="375" height="667"/>
-        <image name="bg_header_medium" width="375" height="180"/>
+        <image name="bg_header_medium" width="375" height="147"/>
         <image name="bg_header_small" width="375" height="87"/>
         <image name="bg_simple_gradient" width="375" height="667"/>
         <image name="btn_add_practice" width="184" height="51"/>
