Ver 1.2(8) : Note feature all issues fixed.

--- a/Modacity/Modacity/ViewController/Playlist/playlist.storyboard
+++ b/Modacity/Modacity/ViewController/Playlist/playlist.storyboard
@@ -407,7 +407,7 @@
                                 </constraints>
                                 <state key="normal" image="icon_notes"/>
                                 <connections>
-                                    <action selector="onEditName:" destination="2UX-vR-wCX" eventType="touchUpInside" id="fMN-vb-fCc"/>
+                                    <action selector="onNotes:" destination="2UX-vR-wCX" eventType="touchUpInside" id="3RK-1z-LV4"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="93d-fu-5Ec">
