--- a/Modacity/Modacity/ViewController/Practice/PracticeMusicQuoteCell.xib
+++ b/Modacity/Modacity/ViewController/Practice/PracticeMusicQuoteCell.xib
@@ -28,32 +28,56 @@
                             <constraint firstAttribute="width" constant="29" id="A68-tX-q58"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mistakes are immensely useful. They show us where we are right now and what we need to do next." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="2EC-zg-tz3">
-                        <rect key="frame" x="60" y="20" width="359" height="32.5"/>
-                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="14"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- William Westney" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZIW-R5-rgq">
-                        <rect key="frame" x="60" y="57.5" width="80" height="12"/>
-                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="10"/>
-                        <color key="textColor" red="0.10588235294117647" green="0.73725490196078436" blue="0.71372549019607845" alpha="0.69999999999999996" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6YD-ZE-69f">
+                        <rect key="frame" x="60" y="20" width="349" height="54"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tcr-VE-wTr">
+                                <rect key="frame" x="0.0" y="2.5" width="349" height="49.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mistakes are immensely useful. They show us where we are right now and what we need to do next." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="2EC-zg-tz3">
+                                        <rect key="frame" x="0.0" y="0.0" width="349" height="32.5"/>
+                                        <fontDescription key="fontDescription" name="Helvetica-LightOblique" family="Helvetica" pointSize="14"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- William Westney" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZIW-R5-rgq">
+                                        <rect key="frame" x="0.0" y="37.5" width="79" height="12"/>
+                                        <fontDescription key="fontDescription" name="Helvetica-Light" family="Helvetica" pointSize="10"/>
+                                        <color key="textColor" red="0.10588235294117647" green="0.73725490196078436" blue="0.71372549019607845" alpha="0.69999999999999996" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="ZIW-R5-rgq" firstAttribute="top" secondItem="2EC-zg-tz3" secondAttribute="bottom" constant="5" id="0op-HW-RY9"/>
+                                    <constraint firstAttribute="bottom" secondItem="ZIW-R5-rgq" secondAttribute="bottom" id="5cC-YZ-bQS"/>
+                                    <constraint firstAttribute="trailing" secondItem="2EC-zg-tz3" secondAttribute="trailing" id="HVW-NG-fA0"/>
+                                    <constraint firstItem="ZIW-R5-rgq" firstAttribute="leading" secondItem="2EC-zg-tz3" secondAttribute="leading" id="LzY-eA-RpI"/>
+                                    <constraint firstItem="2EC-zg-tz3" firstAttribute="top" secondItem="tcr-VE-wTr" secondAttribute="top" id="PPj-HO-qZm"/>
+                                    <constraint firstItem="2EC-zg-tz3" firstAttribute="leading" secondItem="tcr-VE-wTr" secondAttribute="leading" id="km2-Bh-k2y"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="tcr-VE-wTr" firstAttribute="centerY" secondItem="6YD-ZE-69f" secondAttribute="centerY" id="D8z-70-8QM"/>
+                            <constraint firstAttribute="trailing" secondItem="tcr-VE-wTr" secondAttribute="trailing" id="DfE-XQ-vb9"/>
+                            <constraint firstItem="tcr-VE-wTr" firstAttribute="leading" secondItem="6YD-ZE-69f" secondAttribute="leading" id="Ny4-1C-XTc"/>
+                        </constraints>
+                    </view>
                 </subviews>
             </view>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="6tc-zt-NOo" secondAttribute="trailing" constant="5" id="5wb-ta-pA5"/>
                 <constraint firstItem="mZJ-tZ-gmG" firstAttribute="leading" secondItem="ZTg-uK-7eu" secondAttribute="leading" constant="20" id="Ekv-lC-PTl"/>
-                <constraint firstItem="2EC-zg-tz3" firstAttribute="leading" secondItem="mZJ-tZ-gmG" secondAttribute="trailing" constant="11" id="Mc6-CK-Fgz"/>
-                <constraint firstItem="2EC-zg-tz3" firstAttribute="trailing" secondItem="6tc-zt-NOo" secondAttribute="trailing" constant="-5" id="NTi-J3-aGI"/>
+                <constraint firstItem="ZTg-uK-7eu" firstAttribute="trailing" secondItem="6YD-ZE-69f" secondAttribute="trailing" constant="20" id="FJt-0l-jE8"/>
                 <constraint firstAttribute="bottom" secondItem="6tc-zt-NOo" secondAttribute="bottom" constant="5" id="U8W-ws-Xgg"/>
-                <constraint firstItem="2EC-zg-tz3" firstAttribute="top" secondItem="mZJ-tZ-gmG" secondAttribute="top" id="YKt-0m-yqn"/>
                 <constraint firstItem="6tc-zt-NOo" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="dKw-ha-l4R"/>
-                <constraint firstItem="ZIW-R5-rgq" firstAttribute="leading" secondItem="2EC-zg-tz3" secondAttribute="leading" id="ms8-1i-R1O"/>
+                <constraint firstItem="ZTg-uK-7eu" firstAttribute="bottom" secondItem="6YD-ZE-69f" secondAttribute="bottom" constant="35" id="lFo-O1-nSm"/>
                 <constraint firstItem="mZJ-tZ-gmG" firstAttribute="top" secondItem="ZTg-uK-7eu" secondAttribute="top" constant="20" id="p7B-58-Mbc"/>
                 <constraint firstItem="6tc-zt-NOo" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="qAs-HR-aID"/>
-                <constraint firstItem="ZIW-R5-rgq" firstAttribute="top" secondItem="2EC-zg-tz3" secondAttribute="bottom" constant="5" id="xK2-Va-wtE"/>
+                <constraint firstItem="6YD-ZE-69f" firstAttribute="top" secondItem="ZTg-uK-7eu" secondAttribute="top" constant="20" id="t5Z-JE-nZx"/>
+                <constraint firstItem="6YD-ZE-69f" firstAttribute="leading" secondItem="mZJ-tZ-gmG" secondAttribute="trailing" constant="11" id="wot-PT-2hk"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="429" height="109"/>
