--- a/Modacity/Modacity/ViewController/Practice/practice_note.storyboard
+++ b/Modacity/Modacity/ViewController/Practice/practice_note.storyboard
@@ -83,11 +83,13 @@
                                     </imageView>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cfs-GR-Mal">
                                         <rect key="frame" x="54" y="0.0" width="273" height="50"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
                                         <connections>
                                             <action selector="onAddNote:" destination="hlV-1Z-DIg" eventType="editingDidEndOnExit" id="uS5-c3-zN8"/>
+                                            <action selector="onEditingDidBeginForAddNote:" destination="hlV-1Z-DIg" eventType="editingDidBegin" id="WQ0-XS-qLH"/>
                                         </connections>
                                     </textField>
                                 </subviews>
@@ -113,7 +115,7 @@
                                     <constraint firstAttribute="height" constant="1" id="c0K-tL-95q"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="f74-VK-C1a">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="f74-VK-C1a" customClass="TPKeyboardAvoidingTableView">
                                 <rect key="frame" x="0.0" y="161" width="375" height="506"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -124,8 +126,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="116"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" image="icon_checkmark_blue_deselected" translatesAutoresizingMaskIntoConstraints="NO" id="FXB-qh-FGf">
-                                                    <rect key="frame" x="15" y="15" width="26" height="26"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" image="icon_checkmark_white_grayed" translatesAutoresizingMaskIntoConstraints="NO" id="FXB-qh-FGf">
+                                                    <rect key="frame" x="15" y="15" width="26" height="22"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="26" id="nxZ-DE-2rr"/>
                                                     </constraints>
@@ -176,6 +178,20 @@
                                                     <color key="textColor" white="1" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Aw-CR-eav">
+                                                    <rect key="frame" x="51" y="10" width="263" height="30"/>
+                                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="EGf-aV-xRG"/>
+                                                    </constraints>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                    <connections>
+                                                        <action selector="onDidEndOnExitOnField:" destination="Ugn-Dw-dGs" eventType="editingDidEnd" id="9Eg-vr-Ksr"/>
+                                                        <action selector="onDidEndOnExitOnField:" destination="Ugn-Dw-dGs" eventType="editingDidEndOnExit" id="wyo-wS-lsW"/>
+                                                    </connections>
+                                                </textField>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="XRr-gh-MES" firstAttribute="top" secondItem="0lE-vm-czQ" secondAttribute="top" constant="10" id="0si-jb-duh"/>
@@ -188,11 +204,14 @@
                                                 <constraint firstAttribute="trailing" secondItem="er6-EU-SUa" secondAttribute="trailing" constant="5" id="MTn-Da-nOT"/>
                                                 <constraint firstAttribute="trailing" secondItem="zCG-Bm-g9o" secondAttribute="trailing" id="Qwc-2S-nLX"/>
                                                 <constraint firstItem="Z9I-Ta-dGu" firstAttribute="leading" secondItem="XRr-gh-MES" secondAttribute="leading" id="U2a-jU-eTh"/>
+                                                <constraint firstItem="7Aw-CR-eav" firstAttribute="leading" secondItem="XRr-gh-MES" secondAttribute="leading" id="c82-ce-sPC"/>
+                                                <constraint firstItem="7Aw-CR-eav" firstAttribute="trailing" secondItem="XRr-gh-MES" secondAttribute="trailing" id="dS5-0k-EwT"/>
                                                 <constraint firstItem="er6-EU-SUa" firstAttribute="leading" secondItem="XRr-gh-MES" secondAttribute="trailing" constant="8" id="lZi-mV-Du9"/>
                                                 <constraint firstItem="Z9I-Ta-dGu" firstAttribute="trailing" secondItem="XRr-gh-MES" secondAttribute="trailing" id="ofw-hS-OiZ"/>
                                                 <constraint firstAttribute="bottom" secondItem="rfW-dO-B6n" secondAttribute="bottom" constant="10" id="r8g-2K-5uc"/>
                                                 <constraint firstItem="FXB-qh-FGf" firstAttribute="leading" secondItem="0lE-vm-czQ" secondAttribute="leading" constant="15" id="sJS-ua-OFT"/>
                                                 <constraint firstAttribute="bottom" secondItem="zCG-Bm-g9o" secondAttribute="bottom" id="sOS-Pq-2L2"/>
+                                                <constraint firstItem="7Aw-CR-eav" firstAttribute="top" secondItem="XRr-gh-MES" secondAttribute="top" id="uyV-q3-jH0"/>
                                                 <constraint firstItem="rfW-dO-B6n" firstAttribute="leading" secondItem="XRr-gh-MES" secondAttribute="leading" id="vko-Uz-AI6"/>
                                                 <constraint firstItem="rfW-dO-B6n" firstAttribute="top" secondItem="Z9I-Ta-dGu" secondAttribute="bottom" constant="3" id="xf4-Kb-DaR"/>
                                                 <constraint firstItem="Z9I-Ta-dGu" firstAttribute="top" secondItem="XRr-gh-MES" secondAttribute="bottom" constant="3" id="xgi-3q-4ad"/>
@@ -204,6 +223,7 @@
                                             <outlet property="labelNote" destination="XRr-gh-MES" id="bML-c5-wCc"/>
                                             <outlet property="labelNoteCreated" destination="rfW-dO-B6n" id="Sm5-hE-adg"/>
                                             <outlet property="labelNoteSubTitle" destination="Z9I-Ta-dGu" id="hhc-dw-3ja"/>
+                                            <outlet property="textfieldNoteTitle" destination="7Aw-CR-eav" id="gVG-T2-eXx"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ButtonCell" rowHeight="77" id="Jg6-Rj-3wC" customClass="ButtonCell" customModule="Modacity" customModuleProvider="target">
@@ -404,7 +424,7 @@
         <image name="btn_bg_archived" width="179" height="48"/>
         <image name="icon_arrow_left" width="10" height="15"/>
         <image name="icon_cell_menu" width="16" height="4"/>
-        <image name="icon_checkmark_blue_deselected" width="26" height="26"/>
+        <image name="icon_checkmark_white_grayed" width="22" height="22"/>
         <image name="icon_delete_white" width="18" height="19"/>
         <image name="icon_done" width="18" height="15"/>
         <image name="icon_plus" width="36" height="36"/>
